--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,13 @@ authors = ["Gerald Lau <gerald.lau.95@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+black = "^22.3.0"
+networkx = "^2.8"
+methodtools = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
