--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "pyboggle"
 version = "0.1.0"
 description = ""
 authors = ["Gerald Lau <gerald.lau.95@gmail.com>"]
+license = "BSD-3-Clause"
 
 [tool.poetry.dependencies]
 python = "^3.9"
